change keyboard layout

--- a/index.html
+++ b/index.html
@@ -155,16 +155,16 @@ function animate() {
     var animationInterval = setInterval(animate, 100);
     
     document.addEventListener('keydown', function(event) {
-        if ((event.key === 'w' || event.key === 'W' || event.key === 'ArrowUp') && direction[direction.length - 1][1] === 0) {
+        if ((event.key === 'w' || event.key === 'W' || event.key === 'ц' || event.key === 'Ц' || event.key === 'ArrowUp') && direction[direction.length - 1][1] === 0) {
             direction.push([0, -1]);
         }
-        if ((event.key === 's' || event.key === 'S' || event.key === 'ArrowDown') && direction[direction.length - 1][1] === 0) {
+        if ((event.key === 's' || event.key === 'S' || event.key === 'ы' || event.key === 'Ы' || event.key === 'ArrowDown') && direction[direction.length - 1][1] === 0) {
             direction.push([0, 1]);
         }
-        if ((event.key === 'd' || event.key === 'D' || event.key === 'ArrowRight') && direction[direction.length - 1][0] === 0) {
+        if ((event.key === 'd' || event.key === 'D' || event.key === 'в' || event.key === 'В' || event.key === 'ArrowRight') && direction[direction.length - 1][0] === 0) {
             direction.push([1, 0]);
         }
-        if ((event.key === 'a' || event.key === 'A' || event.key === 'ArrowLeft') && direction[direction.length - 1][0] === 0) {
+        if ((event.key === 'a' || event.key === 'A' || event.key === 'ф' || event.key === 'Ф' || event.key === 'ArrowLeft') && direction[direction.length - 1][0] === 0) {
             direction.push([-1, 0]);
         }
     });
