--- a/index.html
+++ b/index.html
@@ -216,70 +216,72 @@ function putFood() {
 
     .snake-head {
         background-color: black;
+        border: 3px solid lightgray; 
+        box-sizing: border-box;
     }
 
     .vertical-segment {
         background-color: red;
-        border-left: 4px solid black; 
-        border-right: 4px solid black;
+        border-left: 4px solid lightgray; 
+        border-right: 4px solid lightgray;
         box-sizing: border-box;
     }
     .horisontal-segment {
         background-color: red;
-        border-top: 4px solid black; 
-        border-bottom: 4px solid black;
+        border-top: 4px solid lightgray; 
+        border-bottom: 4px solid lightgray;
         box-sizing: border-box;
     }
     .top-right-corner-segment {
         background-color: red;
-        border-top: 4px solid black;
-        border-right: 4px solid black;
+        border-top: 4px solid lightgray;
+        border-right: 4px solid lightgray;
         box-sizing: border-box; 
     }
     .bottom-right-corner-segment {
         background-color: red;
-        border-bottom: 4px solid black;
-        border-right: 4px solid black;
+        border-bottom: 4px solid lightgray;
+        border-right: 4px solid lightgray;
         box-sizing: border-box; 
     }
     .bottom-left-corner-segment {
         background-color: red;
-        border-bottom: 4px solid black;
-        border-left: 4px solid black;
+        border-bottom: 4px solid lightgray;
+        border-left: 4px solid lightgray;
         box-sizing: border-box; 
     }
     .top-left-corner-segment {
         background-color: red;
-        border-top: 4px solid black;
-        border-left: 4px solid black;
+        border-top: 4px solid lightgray;
+        border-left: 4px solid lightgray;
         box-sizing: border-box; 
     }
     .top-end-segment {
         background-color: red;
-        border-top: 4px solid black; 
-        border-left: 4px solid black; 
-        border-right: 4px solid black;
+        border-top: 4px solid lightgray; 
+        border-left: 4px solid lightgray; 
+        border-right: 4px solid lightgray;
         box-sizing: border-box;
     }
     .bottom-end-segment {
         background-color: red;
-        border-bottom: 4px solid black;
-        border-left: 4px solid black; 
-        border-right: 4px solid black;
+        border-bottom: 4px solid lightgray;
+        border-left: 4px solid lightgray; 
+        border-right: 4px solid lightgray;
         box-sizing: border-box;
     }
     .left-end-segment {
         background-color: red;
-        border-left: 4px solid black; 
-        border-top: 4px solid black; 
-        border-bottom: 4px solid black;
+        border-left: 4px solid lightgray; 
+        border-top: 4px solid lightgray; 
+        border-bottom: 4px solid lightgray;
         box-sizing: border-box;
     }
     .right-end-segment {
         background-color: red;
-        border-right: 4px solid black;
-        border-top: 4px solid black; 
-        border-bottom: 4px solid black;
+        border-right: 4px solid lightgray;
+        border-top: 4px solid lightgray; 
+        border-bottom: 4px solid lightgray;
         box-sizing: border-box;
     }
     .food {
